# amphyx-dev-backend

./: .gitignore  manage.py  pyproject.toml  requirements.txt
amphyxdev/: asgi.py  settings.py  urls.py  wsgi.py
apps/: __init__.py
apps/blog/: admin.py  models.py  serializers.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_alter_blogpost_created_at_alter_blogpost_updated_at.py  0003_blogposttag_blogpost_tags.py  0004_blogpost_slug.py
apps/common/: permissions.py
apps/home/: urls.py  views.py
apps/personal_info/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/personal_info/migrations/: 0001_initial.py  0002_contactlink_is_for_hire_alter_contactlink_icon_name_and_more.py
apps/projects/: admin.py  models.py  serializers.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_project_github_link.py
deploy/: build-production.sh
